--- a/Second/app/src/main/res/values/strings.xml
+++ b/Second/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="author">Author</string>
+    <string name="version">Version_really_important</string>
 </resources>
